// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected when passing a light skin 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--normal lab-btn--light"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`OutlineButton renders as expected when passing a small size 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--small"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`OutlineButton renders as expected when passing a wallet icon 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--normal"
    >
      <span
        class="lab-icon lab-icon--wallet lab-icon--white lab-icon--petit lab-btn__icon"
      />
       
      test
    </button>
  </div>
</body>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--normal"
      disabled=""
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`OutlineButton renders as expected when passing fullWidth prop 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--normal lab-btn--block"
    >
       
      test
    </button>
  </div>
</body>
`;

exports[`OutlineButton renders with base props 1`] = `
<body>
  <div>
    <button
      class="lab-btn lab-btn--outline lab-btn--normal"
    >
       
      test
    </button>
  </div>
</body>
`;
